--- a/board.html
+++ b/board.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="board.css">
     <title>Document</title>
 </head>
 <body>
+    <div id="getNames">
+        <h2>Please enter the player names</h2>
+        <label for="player1">Player 1:</label><br>
+        <input type="text" id="player1" name="player1" value=""><br>
+        <label for="player2">Player 2:</label><br>
+        <input type="text" id="player2" name="player2" value=""><br>
+        <button id="begin">Begin Game</button>
+        <p id="fillNames"></p>
+    </div>
+    <div class="container">
+        <div class="bottom-right" id="0"></div>
+        <div class="bottom-right" id="1"></div>
+        <div class="bottom" id="2"></div>
+        <div class="bottom-right" id="3"></div>
+        <div class="bottom-right" id="4"></div>
+        <div class="bottom" id="5"></div>
+        <div class="right" id="6"></div>
+        <div class="right" id="7"></div>
+        <div id="8"></div>
+    </div>
+    <p id="result"></p>
+    <div id="scores"></div>
+    <div id="buttons">
+    <button id="restartButton">Restart</button>
+    <button id="resetButton">Reset</button>
+</div>
     <script src="board.js"></script>
 </body>
 </html>
